--- a/12.第94章練習/css/style.css
+++ b/12.第94章練習/css/style.css
@@ -1,21 +1,18 @@
-html{
-  height: 100%;
-}
 body{
+  height: 100%;
   background: url("../img/map.png");
 }
 .rocket{
   position: absolute;
   bottom: 0;
-  transition: all 1s cubic-bezier(1, 0.08, 0.73, 0.24);
-
 }
 .r1{
-  left:0;
+  left: 0;
 }
 .r2{
   left: 250px;
 }
 .r3{
-  left: 500px; 
+  left: 500px
 }
+
